# libEasyRandR

./: .gitignore  CMakeLists.txt  EasyRandRConfig.cmake.in  EasyRandRVersion.cmake.in  README  TODO  libEasyRandR.kdev4
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  CMakeLists.txt~  configuration.cpp  configuration.h  crtc.cpp  crtc.h  easycfg.h.cmake  main.cpp  output.cpp  output.h  outputproperty.cpp  outputproperty.h  screen.cpp  screen.h
src/test/: CMakeLists.txt  main.cpp
